--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
-archives_base_name=fabric-example-mod
-maven_group=net.fabricmc
+archives_base_name=PlumBlossomClient
+maven_group=me.youm
 loom_version=1.0-SNAPSHOT
 minecraft_version=1.19.3
 yarn_mappings=1.19.3+build.5
